SWC-6702: fix text overflow in name column of EntityFinder

--- a/packages/synapse-react-client/src/style/components/entity_finder/_details-view.scss
+++ b/packages/synapse-react-client/src/style/components/entity_finder/_details-view.scss
@@ -83,4 +83,10 @@ $row-hovered-background-color: unset;
   .EntityFinderTableCellEntityIcon svg {
     width: 20px;
   }
+
+  .nameColumnCell {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
 }
